compiler/kernc_cli/tests/soundness/run-pass/projection/concrete_specialized_projection_normalizes.rn
// class: projection-normalization
// source: concrete associated projections should normalize before layout, ABI lowering, and constexpr layout queries
// exit: 0

type Pick = trait {
    type Out;
};

impl[T] []T : Pick {
    type Out = bool;
}

impl []u8 : Pick {
    type Out = i32;
}

type Bytes = []u8;

fn project(value: Bytes) Bytes.Pick.Out {
    _ = value;
    return 7;
}

fn main() i32 {
    let size = @sizeOf[Bytes.Pick.Out]();
    let align = @alignOf[Bytes.Pick.Out]();
    let value = project("ok");
    return if (value == 7 and size == 4 and align == 4) {
        0
    } else {
        1
    };
}
