compiler/kernc_cli/tests/soundness/reject/projection/self_recursive_associated_projection_cycle.rn
// class: projection-cycle
// stderr: recursive associated type projection cycle detected
// stderr: projection cycle: X.Loop.Out -> X.Loop.Out

type Loop = trait {
    type Out;
};

type X = struct {};

impl X: Loop {
    type Out = X.Loop.Out;
}

fn project(value: X) X.Loop.Out {
    _ = value;
    return X.{};
}

fn main() i32 {
    _ = project(X.{});
    return 0;
}
